# beyondCSV

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  sst-env.d.ts  sst.config.ts  svelte.config.js  tsconfig.json
infrastructure/: api.ts  dynamo.ts  storage.ts
src/backend/common/src/: cors.rs  creation_parsing.rs  creation_types.rs  duck_db.rs  dynamo.rs  lib.rs  parquet_creation.rs  parquet_creation_processor.rs  parquet_query.rs  query_prompts.rs  s3.rs  test_creation_processor.rs
src/backend/csv/get-headers/: index.rs
src/backend/csv/parquet-creation/: index.rs
src/backend/csv/parquet-creation-processor/: index.rs
src/backend/csv/test-processor/: index.rs
src/backend/parquet/generate-query/: index.rs
src/backend/parquet/poller/: index.rs
src/backend/parquet/update-context/: index.rs
src/lib/ChatHeader/: header.svelte
src/lib/ChatInput/: input.svelte
src/lib/ChatMessage/: message.svelte
src/lib/Columns/: colums.svelte
src/lib/ContextBox/: context.svelte
src/lib/DataKey/: data-key.svelte
src/lib/Egg/: buzzEgg.svelte
src/lib/Sidebar/: chatSidebar.svelte
src/lib/TypingIndicator/: indicator.svelte
src/lib/Upload/: upload.svelte
src/lib/UploadingStatus/: status.svelte
src/routes/: +layout.server.ts  +page.svelte  sendDataToLambda.ts
src/routes/chat/: +page.svelte  queryData.ts  updateContext.ts
