[package]
name = "beyondCSV"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
arrow = "50.0"
parquet = "50.0"
polars = { version = "0.37", features = ["lazy", "parquet"] }
aws-config = "1.0"
aws_lambda_events = "0.15"
aws-sdk-s3 = "1.0"
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"



[[bin]]
name = "get_headers"
path = "src/backend/csv/get-headers/index.rs"
