[package]
name = "beyondCSV"
version = "0.1.0"
edition = "2024"

[lib]
name = "common"
path = "src/backend/common/src/lib.rs"


[dependencies]
csv = "1.3"
arrow = { version = "55.1.0", features = ["csv"] }
parquet = { version = "55.1.0", features = ["arrow"] }
aws_lambda_events = "0.15"
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "io-util"] }
tokio-stream = "0.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.88.0"
aws-sdk-bedrockruntime = "1.91.0"
base64 = "0.21"
dotenv = "0.15.0"
http = "0.2"
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = { version = "1.35", features = ["tokio-pg", "serde-with-float"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
sst_sdk = "0.1.0"
polars = { version = "0.46", features = ["lazy", "parquet", "serde", "sql"] }
polars-sql = "0.46"
rayon = "1.10.0"
futures = "0.3.31"
tokio-util = { version = "0.7", features = ["io"] }
aws-sdk-sqs = "1.73.0"
aws-sdk-dynamodb = "1.80.0"
chrono = "0.4.41"



[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "parquet-creation"
path = "src/backend/csv/parquet-creation/index.rs"

[[bin]]
name = "parquet-creation-processor"
path = "src/backend/csv/parquet-creation-processor/index.rs"

[[bin]]
name = "generate-parquet-query"
path = "src/backend/parquet/generate-query/index.rs"

[[bin]]
name = "poll-parquet-status"
path = "src/backend/parquet/poller/index.rs"

